--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -4,3 +4,26 @@
 	<button type="button" class="btn-close" style="position: fixed; top: 5rem; right: 3rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';"></button>
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
+<div class="container marketing">
+	<div class="row">
+		<div class="col-lg-4">
+			<object width="40%" height="40%" data="./Tanghin in Minecraft/builder.png" type="image/svg+xml"></object>
+			<h2>Builder</h2>
+			<p>Jimmy Leung</p>
+		</div>
+		<div class="col-lg-4">
+			<object width="40%" height="40%" data="./Tanghin in Minecraft/engineering.png" type="image/svg+xml"></object>
+			<h2>Engineering</h2>
+			<p>Bobby Chan, Jimmy Leung</p>
+		</div>
+		<div class="col-lg-4">
+			<object width="40%" height="40%" data="./Tanghin in Minecraft/advertiser.png"></object>
+			<h2>Advertiser and Engineering Support</h2>
+			<p>Bill Kwok Yik</p>
+		</div>
+	</div>
+</div>
+<h2>References</h2>
+<hr>
+<a href="http://openday.tanghin.edu.hk/">openday.tanghin.edu.hk</a><br>
+<a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth</a>
