--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -91,17 +91,17 @@
 <div class="container marketing">
 	<div class="row">
 		<div class="col-lg-4">
-			<object width="40%" height="40%" data="./Tanghin in Minecraft/builder.png" type="image/svg+xml"></object>
+			<object width="40%" height="auto" data="./Tanghin in Minecraft/builder.png"></object>
 			<h2>Builder</h2>
 			<p>Jimmy Leung</p>
 		</div>
 		<div class="col-lg-4">
-			<object width="40%" height="40%" data="./Tanghin in Minecraft/engineering.png" type="image/svg+xml"></object>
+			<object width="40%" height="auto" data="./Tanghin in Minecraft/engineering.png"></object>
 			<h2>Engineering</h2>
 			<p>Bobby Chan, Jimmy Leung</p>
 		</div>
 		<div class="col-lg-4">
-			<object width="40%" height="40%" data="./Tanghin in Minecraft/advertiser.png"></object>
+			<object width="40%" height="auto" data="./Tanghin in Minecraft/advertiser.png"></object>
 			<h2>Advertiser and Engineering Support</h2>
 			<p>Bill Kwok Yik</p>
 		</div>
