--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -88,7 +88,7 @@
 	<button type="button" class="btn-close" style="position: fixed; top: 5rem; right: 3rem; z-index: 4;" onclick="document.getElementById('3D_viewer').style.display = 'none';"></button>
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
-<a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</button>
+<a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a>
 <div class="container marketing">
 	<div class="row">
 		<div class="col-lg-4">
