--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -89,6 +89,7 @@
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
 <a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a>
+<br>
 <div class="container marketing">
 	<div class="row">
 		<div class="col-lg-4">
@@ -110,5 +111,5 @@
 </div>
 <h2>References</h2>
 <hr>
-<a href="http://openday.tanghin.edu.hk/">Tanghin Openday Website</a><br>
-<a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth</a>
+<a href="http://openday.tanghin.edu.hk/">Tanghin 35th Anniversary</a><br>
+<a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth - Tanghin</a>
