--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -12,6 +12,9 @@
 .marketing h2 {
   font-weight: 400;
 }
+.mt15 {
+  margin-top: 1.5rem;
+}
 /* rtl:begin:ignore */
 .marketing .col-lg-4 p {
   margin-right: .75rem;
@@ -24,8 +27,7 @@
 </model-viewer>
 <button type="button" class="btn btn-outline-primary" onclick="document.getElementById('3D_viewer').style.display = 'block';">View in 3D</button>
 <a type="button" class="btn btn-outline-primary" href="https://github.com/projectgeorgia/Tanghin-in-Minecraft">View on GitHub</a>
-<br>
-<div class="container marketing">
+<div class="container marketing mt15">
 	<div class="row">
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/builder.png"></object>
