--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -41,12 +41,19 @@
 		</div>
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/advertiser.png"></object>
-			<h2>Advertiser and Engineering Support</h2>
+			<h2>Advertising and Engineering Support</h2>
 			<p>Bill Kwok Yik</p>
 		</div>
 	</div>
 </div>
+<h2>What's new in v2.1</h2>
+<hr>
+<p>- New design of drinking fountain<br>- Alarm cycle extended to one minute<br>- Removal of construction marks<br>- Ability to switch on/off alarm</p>
+<br>
 <h2>References</h2>
 <hr>
 <a href="http://openday.tanghin.edu.hk/">Tanghin 35th Anniversary</a><br>
 <a href="https://earth.app.goo.gl/?apn=com.google.earth&ibi=com.google.b612&isi=293622097&ius=googleearth&link=https%3a%2f%2fearth.google.com%2fweb%2f%4022.499271,114.129214,24.88141394a,1705.10619243d,35y,0h,45t,0r%2fdata%3dCmwaahJiCiUweDM0MDNmNjE2ZDViN2JlZmY6MHgyZmY0MTlmZTM1YmE5OTdmGVrXaDnQfzZAIdwLzApFiFxAKifpppnmuK_pgZPmlZnoga_lkIjmnIPphKfpoa_ntIDlv7XkuK3lrbgYAiABKAIoAg">Google Earth - Tanghin</a>
+<br>
+<h2>Contact</h2>
+<p>You can contact the builders through creating issues on <a href="https://github.com/projectgeorgia/Tanghin-in-Minecraft/issues">GitHub</a></p>
