--- a/projects/blue/Tanghin in Minecraft/detail.html
+++ b/projects/blue/Tanghin in Minecraft/detail.html
@@ -42,7 +42,7 @@
 		<div class="col-lg-4">
 			<object width="40%" height="auto" data="./Tanghin in Minecraft/advertiser.png"></object>
 			<h2>Advertising and Engineering Support</h2>
-			<p>Bill Kwok Yik</p>
+			<p>Bill Kwok</p>
 		</div>
 	</div>
 </div>
