--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -84,16 +84,12 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container" id="Header">
-				<div class="row py-lg-5">
-				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light" id="Title"></h1>
-					<p class="lead text-muted" id="Date"></p>
-					<hr>
-					<img class="w-100" id="MediaImage">
-					<video class="w-100" id="MediaVideo" controls></video>
-					</div>
-				</div>
+			<section class="container" id="Header">
+				<h1 class="fw-bold" id="Title"></h1>
+				<p class="text-muted" id="Date"></p>
+				<hr>
+				<img class="w-100" id="MediaImage">
+				<video class="w-100" id="MediaVideo" controls></video>
 			</section>
 			
 			<div class="container">
