--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -35,6 +35,7 @@
 			
 			#MediaImage #MediaVideo {
 			  float: left;
+			  width: 60%;
 			}	
 		</style>
 	</head>
@@ -91,8 +92,8 @@
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
-				<img class="w-70" id="MediaImage">
-				<video class="w-70" id="MediaVideo" controls></video>
+				<img id="MediaImage">
+				<video id="MediaVideo" controls></video>
 			</section>
 			
 			<div class="container">
