--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -35,8 +35,6 @@
 			
 			#MediaImage #MediaVideo {
 			  float: left;
-			  width: 60%; !important
-			  height: auto;
 			}	
 		</style>
 	</head>
@@ -94,8 +92,8 @@
 				<p class="text-muted" id="Date"></p>
 				<hr>
 				<div>
-					<img id="MediaImage">
-					<video id="MediaVideo" controls></video>
+					<img class="w-50" id="MediaImage">
+					<video class="w-50" id="MediaVideo" controls></video>
 					<h2>Detail</h2>
 					<hr>
 					
