--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -33,9 +33,12 @@
 			  padding-top: 3rem;
 			}
 			
-			#MediaImage #MediaVideo {
-			  float: left;
-			}	
+			@media (min-width:768px) {
+			  #MediaImage #MediaVideo {
+				float: left;
+				width: 65vw;
+			  }	
+			}
 		</style>
 	</head>
 	<body>
