--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -95,8 +95,8 @@
 				<p class="text-muted" id="Date"></p>
 				<hr>
 				<div>
-					<img class="w-50" id="MediaImage">
-					<video class="w-50" id="MediaVideo" controls></video>
+					<img id="MediaImage">
+					<video id="MediaVideo" controls></video>
 					<h2>Detail</h2>
 					<hr>
 					
