--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -36,7 +36,7 @@
 			@media (min-width:768px) {
 			  #MediaImage #MediaVideo {
 				float: left;
-				width: 65vw;
+				width: 50vw; !important	
 			  }	
 			}
 		</style>
