--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -34,7 +34,7 @@
 			}
 			
 			@media (min-width:768px) {
-			  #MediaImage #MediaVideo {
+			  #MediaImage{
 				float: left;
 				width: 50vw; !important	
 			  }	
