--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -94,7 +94,7 @@
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
-				<div>
+				<div class="container">
 					<img id="MediaImage">
 					<video id="MediaVideo" controls></video>
 					<h2>Detail</h2>
