--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -95,8 +95,8 @@
 				<p class="text-muted" id="Date"></p>
 				<hr>
 				<div class="container">
-					<img id="MediaImage">
-					<video id="MediaVideo" controls></video>
+					<img id="MediaImage" style="width: 100vw;">
+					<video id="MediaVideo" style="width: 100vw;" controls></video>
 					<h2>Detail</h2>
 					<hr>
 					
