--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -33,6 +33,12 @@
 			  padding-top: 3rem;
 			}
 			
+			@media (max-width:767px) {
+			  #MediaImage{
+				width: 100vw; !important	
+			  }	
+			}
+			
 			@media (min-width:768px) {
 			  #MediaImage{
 				float: left;
@@ -95,8 +101,8 @@
 				<p class="text-muted" id="Date"></p>
 				<hr>
 				<div class="container">
-					<img id="MediaImage" style="width: 100vw;">
-					<video id="MediaVideo" style="width: 100vw;" controls></video>
+					<img id="MediaImage">
+					<video id="MediaVideo" controls></video>
 					<h2>Detail</h2>
 					<hr>
 					
