--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -101,7 +101,7 @@
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
-				<div class="container" style="display: inline-block;">
+				<div style="display: inline-block;">
 					<img id="MediaImage">
 					<video id="MediaVideo" controls></video>
 					<h2>Detail</h2>
