--- a/projects/black/index.html
+++ b/projects/black/index.html
@@ -138,7 +138,7 @@
 			  <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
 				<object class="bi" width="30" height="30" data="../../img/icon.svg" type="image/svg+xml"></object>
 			  </a>
-			  <span class="text-muted">&copy; 2021 Project Georgia</span>
+			  <span class="text-muted">&copy; 2021-2022 Project Georgia</span>
 			</div>
 
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
