--- a/about.html
+++ b/about.html
@@ -28,6 +28,14 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#icon {
+			  position: absolute;
+			  top: 0;
+			  left: 50%;
+			  min-width: 100%;
+			  height: 32rem;
+			}
 		
 		</style>
 	</head>
@@ -80,13 +88,14 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container">
-				<div class="row py-lg-5">
-				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Coming soon...</h1>
+			<div class="container">
+				<div class="row">
+				  <div class="col-lg-4">
+					<object id="icon" width="40%" height="40%" data="./img/Jimmy_Leung.png"></object>
+					<p>Jimmy Leung</p>
 				  </div>
 				</div>
-			</section>
+			</div>
 		</main>
 		
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
