--- a/about.html
+++ b/about.html
@@ -29,12 +29,87 @@
 			  color: #5a5a5a;
 			}
 			
-			#icon {
+			/* CUSTOMIZE THE CAROUSEL
+			-------------------------------------------------- */
+
+			/* Carousel base class */
+			.carousel {
+			  margin-bottom: 4rem;
+			}
+			/* Since positioning the image, we need to help out the caption */
+			.carousel-caption {
+			  bottom: 3rem;
+			  z-index: 10;
+			}
+
+			/* Declare heights because of positioning of img element */
+			.carousel-item {
+			  height: 32rem;
+			}
+			.carousel-item > img {
 			  position: absolute;
 			  top: 0;
-			  left: 50%;
+			  left: 0;
 			  min-width: 100%;
 			  height: 32rem;
+			}
+
+
+			/* MARKETING CONTENT
+			-------------------------------------------------- */
+
+			/* Center align the text within the three columns below the carousel */
+			.marketing .col-lg-4 {
+			  margin-bottom: 1.5rem;
+			  text-align: center;
+			}
+			.marketing h2 {
+			  font-weight: 400;
+			}
+			/* rtl:begin:ignore */
+			.marketing .col-lg-4 p {
+			  margin-right: .75rem;
+			  margin-left: .75rem;
+			}
+			/* rtl:end:ignore */
+
+
+			/* Featurettes
+			------------------------- */
+
+			.featurette-divider {
+			  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+			}
+
+			/* Thin out the marketing headings */
+			.featurette-heading {
+			  font-weight: 300;
+			  line-height: 1;
+			  /* rtl:remove */
+			  letter-spacing: -.05rem;
+			}
+
+
+			/* RESPONSIVE CSS
+			-------------------------------------------------- */
+
+			@media (min-width: 40em) {
+			  /* Bump up size of carousel content */
+			  .carousel-caption p {
+				margin-bottom: 1.25rem;
+				font-size: 1.25rem;
+				line-height: 1.4;
+			  }
+
+			  .featurette-heading {
+				font-size: 50px;
+			  }
+			}
+
+			@media (min-width: 62em) {
+			  .featurette-heading {
+				margin-top: 7rem;
+			  }
 			}
 		
 		</style>
@@ -88,11 +163,23 @@
 		</header>
 	
 		<main>
-			<div class="container">
+			<div class="container marketing">
 				<div class="row">
 				  <div class="col-lg-4">
-					<object id="icon" width="40%" height="40%" data="./img/Jimmy_Leung.png"></object>
-					<p>Jimmy Leung</p>
+					<object width="40%" height="40%" data="./img/Jimmy_Leung.png"></object>
+					<h2>Jimmy Leung</h2>
+				  </div>
+				  <div class="col-lg-4">
+					<object width="40%" height="40%" data="./img/Clip_Studio_Paint.svg" type="image/svg+xml"></object>
+					<h2>Clip Studio Paint</h2>
+					<p>Used for character design.</p>
+					<p><a class="btn btn-secondary" href="https://www.clipstudio.net/">Visit &raquo;</a></p>
+				  </div>
+				  <div class="col-lg-4">
+					<object width="40%" height="40%" data="./img/Android_Studio.svg" type="image/svg+xml"></object>
+					<h2>Android Stduio</h2>
+					<p>Used for development of our Android apps.</p>
+					<p><a class="btn btn-secondary" href="https://developer.android.com/studio">Visit &raquo;</a></p>
 				  </div>
 				</div>
 			</div>
