--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
 			}
 			
 			#icon {
+			  position: absolute;
 			  margin-left: auto;
 			  margin-right: auto;
 			}
@@ -88,7 +89,7 @@
 			<div class="container">
 				<div class="row">
 				  <div class="col-lg-4">
-					<object id="icon" width="40%" height="40%" data="./img/Jimmy_Leung.png"></object>
+					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
 					<p>Jimmy Leung</p>
 				  </div>
 				</div>
