--- a/about.html
+++ b/about.html
@@ -31,8 +31,7 @@
 			
 			#icon {
 			  position: absolute;
-			  margin-left: auto;
-			  margin-right: auto;
+			  left: 25%;
 			}
 		
 		</style>
@@ -89,7 +88,7 @@
 			<div class="container">
 				<div class="row">
 				  <div class="col-lg-4">
-					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
+					<object id="icon" width="auto" height="32rem" data="./img/Jimmy_Leung.png"></object>
 					<p>Jimmy Leung</p>
 				  </div>
 				</div>
