--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 			}
 			
 			#icon {
-			  position: absolute;
+			  position: relative;
 			  left: 25%;
 			}
 		
@@ -88,7 +88,7 @@
 			<div class="container">
 				<div class="row">
 				  <div class="col-lg-4">
-					<object id="icon" width="auto" height="32rem" data="./img/Jimmy_Leung.png"></object>
+					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
 					<p>Jimmy Leung</p>
 				  </div>
 				</div>
