--- a/about.html
+++ b/about.html
@@ -28,11 +28,6 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
-			
-			#icon {
-			  position: relative;
-			  left: 25%;
-			}
 		
 		</style>
 	</head>
@@ -86,10 +81,10 @@
 	
 		<main>
 			<div class="container">
-				<div class="row">
+				<div class="row justify-content-md-center">
 				  <div class="col-lg-4">
 					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
-					<p>Jimmy Leung</p>
+					<h2>Jimmy Leung</h2>
 				  </div>
 				</div>
 			</div>
