--- a/about.html
+++ b/about.html
@@ -28,6 +28,14 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#info {
+			  text-align: center;
+			}
+			
+			#icon {
+			  left: 25%;
+			}
 		
 		</style>
 	</head>
@@ -82,7 +90,7 @@
 		<main>
 			<div class="container">
 				<div class="row justify-content-md-center">
-				  <div class="col-lg-4">
+				  <div class="col-md-6" id="info">
 					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
 					<h2>Jimmy Leung</h2>
 				  </div>
