--- a/about.html
+++ b/about.html
@@ -30,11 +30,14 @@
 			}
 			
 			#info {
+			  padding-top: 3rem;
 			  text-align: center;
 			}
 			
 			#icon {
 			  left: 25%;
+			  border-radius: 50%;
+			  display: inline-block;
 			}
 		
 		</style>
