--- a/about.html
+++ b/about.html
@@ -98,13 +98,13 @@
 					<h2>Jimmy Leung</h2>
 				  </div>
 				</div>
-				<h2>Q: What is Project Georgia all about?</h2>
+				<h2>What is Project Georgia all about?</h2>
 				<hr>
-				<p>A: It is a huge project codenamed Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
+				<p>It is a huge project codenamed Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
 				<br>
-				<h2>Q: Why is it called "Project Georgia"?</h2>
+				<h2>Why is it called "Project Georgia"?</h2>
 				<hr>
-				<p>A: Long story short, I was having my first Unity project (which was an epic fail) back when I was 16. I searched through the Internet trying to get a unique name for my character in the game, and the name Georgia came up so I decided to use it. It was never used in any of my projects so I used it for this huge project.</p>
+				<p>Long story short, I was having my first Unity project (which was an epic fail) back when I was 16. I searched through the Internet trying to get a unique name for my character in the game, and the name Georgia came up so I decided to use it. It was never used in any of my projects so I used it for this huge project.</p>
 			</div>
 		</main>
 		
