--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 				<br>
 				<h2>What is Project Georgia all about?</h2>
 				<hr>
-				<p>It is a huge project codenamed Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
+				<p>It is a huge project code-named Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
 				<br>
 				<h2>Why is it called "Project Georgia"?</h2>
 				<hr>
