--- a/about.html
+++ b/about.html
@@ -29,13 +29,7 @@
 			  color: #5a5a5a;
 			}
 			
-			#info {
-			  padding-top: 3rem;
-			  text-align: center;
-			}
-			
 			#icon {
-			  left: 25%;
 			  border-radius: 50%;
 			  display: inline-block;
 			}
@@ -91,14 +85,16 @@
 		</header>
 	
 		<main>
-			<div class="container">
-				<div class="row justify-content-md-center">
-				  <div class="col-md-6" id="info">
+			<section class="py-5 text-center container">
+				<div class="row py-lg-5">
+				  <div class="col-lg-6 col-md-8 mx-auto">
 					<object id="icon" width="40%" height="auto" data="./img/Jimmy_Leung.png"></object>
 					<h2>Jimmy Leung</h2>
 				  </div>
 				</div>
-				<br>
+			</section>
+			<br>
+			<div class="container">
 				<h2>What is Project Georgia all about?</h2>
 				<hr>
 				<p>It is a huge project code-named Georgia. As I have interests in several topics, like making animations, writing mobile apps, and making an actual film, I decided to pack all of my goals and turn them into an enormous project. There is a final goal for the project though, which is to create an actual AI which is called Georgia and can act like a human. Fingers crossed.</p>
