--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,14 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container">
-				<div class="row py-lg-5">
-				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Coming soon...</h1>
-				  </div>
-				</div>
-			</section>
+			<div class="container">
+				<h2>Email</h2>
+				<hr>
+				<a href="mailto:leungjimmy93@gmail.com">link</a>
+				<h2>Instagram</h2>
+				<hr>
+				<a href="https://www.instagram.com/project.georgia/">link</a>
+			</div>
 		</main>
 		
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
