--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,10 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#Header {
+			  padding-top: 3rem;
+			}
 		
 		</style>
 	</head>
@@ -80,10 +84,11 @@
 		</header>
 	
 		<main>
-			<section class="container">
+			<section class="container" id="header">
 				<h2>Email</h2>
 				<hr>
 				<a href="mailto:leungjimmy93@gmail.com">link</a>
+				<br>
 				<h2>Instagram</h2>
 				<hr>
 				<a href="https://www.instagram.com/project.georgia/">link</a>
