--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,9 @@
 			/* Padding below the footer and lighter body text */
 
 			body {
-			  padding-top: 3rem;
+			  padding-top: 6rem;
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
-			}
-			
-			#Header {
-			  padding-top: 3rem;
 			}
 		
 		</style>
@@ -84,11 +80,11 @@
 		</header>
 	
 		<main>
-			<section class="container" id="header">
+			<section class="container">
 				<h2>Email</h2>
 				<hr>
 				<a href="mailto:leungjimmy93@gmail.com">link</a>
-				<br>
+				<br><br>
 				<h2>Instagram</h2>
 				<hr>
 				<a href="https://www.instagram.com/project.georgia/">link</a>
