--- a/projects/index.html
+++ b/projects/index.html
@@ -150,10 +150,10 @@
 							}
 							
 							for (let i2 in database_blue) {
-								Title.push(database_blue[i].Title);
-								ID.push(database_blue[i].ID);
-								Date.push(database_blue[i].Date);
-								Preview.push(encodeURIComponent("./blue/" + database_blue[i].Title + "/preview.jpg"));
+								Title.push(database_blue[i2].Title);
+								ID.push(database_blue[i2].ID);
+								Date.push(database_blue[i2].Date);
+								Preview.push(encodeURIComponent("./blue/" + database_blue[i2].Title + "/preview.jpg"));
 								Colour.push("Blue");
 							}
 							
