--- a/projects/index.html
+++ b/projects/index.html
@@ -157,7 +157,7 @@
 								Date.push(database_blue[i2].Date);
 								Preview.push(encodeURIComponent("./blue/" + database_blue[i2].Title + "/preview.jpg"));
 								Colour.push("Blue");
-								URL.push("./blue/view#" + database_blue[i].ID);
+								URL.push("./blue/view#" + database_blue[i2].ID);
 							}
 							
 							console.log(Title);
