--- a/projects/index.html
+++ b/projects/index.html
@@ -164,7 +164,7 @@
 							
 							for (let i5 = 1; i5 < Date.length; i5++) {
 								go = true;
-								for (let i6 = i5; go; i6--) {
+								for (let i6 = i5; go && i6 > 0; i6--) {
 									go = false;
 									//ssssss
 									console.log(i6);
