--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-		<title>Project Georgia - All project</title>
+		<title>Project Georgia - All projects</title>
 		
 		<style>
 		
@@ -206,7 +206,7 @@
 								}
 							}
 							
-							for (let i7 in database) {
+							for (let i7 in ID) {
 								dummy = "";
 								if (Colour[i7] == "Yellow") {
 									dummy = '<span class="badge bg-warning text-dark">Yellow</span>';
