--- a/projects/index.html
+++ b/projects/index.html
@@ -199,7 +199,7 @@
 								}
 							}
 							
-							for (let i7 in ID) {
+							for (let i7 in Date) {
 								dummy = "";
 								if (Colour[i7] == "Yellow") {
 									dummy = '<span class="badge bg-warning text-dark">Yellow</span>';
