--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
 			}
 		
 		</style>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
 	</head>
 	<body>
 	
@@ -57,10 +57,10 @@
 						Projects
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" href="../projects/black/">Film <span class="badge bg-dark">Black</span></a></li>
-						<li><a class="dropdown-item" href="../projects/yellow/">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
-						<li><a class="dropdown-item" href="../projects/green/">Applications <span class="badge bg-success">Green</span></a></li>
-						<li><a class="dropdown-item" href="../projects/blue/">Others <span class="badge bg-primary">Blue</span></a></li>
+						<li><a class="dropdown-item" href="./black/">Film <span class="badge bg-dark">Black</span></a></li>
+						<li><a class="dropdown-item" href="./yellow/">Animations & Render <span class="badge bg-warning text-dark">Yellow</span></a></li>
+						<li><a class="dropdown-item" href="./green/">Applications <span class="badge bg-success">Green</span></a></li>
+						<li><a class="dropdown-item" href="./blue/">Others <span class="badge bg-primary">Blue</span></a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="#">All projects</a></li>
 					  </ul>
