--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -84,15 +84,18 @@
 	
 		<main>
 			<section class="container" id="Header">
+				<h2>Detail</h2>
+				<hr>
+				<div id="Detail"></div>
+				<br>
+				<h2>Media</h2>
+				<hr>
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
 				<img class="w-100" id="MediaImage">
 				<video class="w-100" id="MediaVideo" controls></video>
-				<br>
-				<h2>Detail</h2>
-				<hr>
-				<div id="Detail"></div>
+				
 			</section>
 			
 			<script>
