--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -34,6 +34,12 @@
 			  background-position: center;
 			  background-size: 100% auto;
 			}
+			
+			@media (max-width:767px)  {
+			  #header {
+				background-size: auto 100%;
+			  }
+			}
 		
 		</style>
 	</head>
