--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -33,6 +33,7 @@
 			  background-image: url("./media/intro.jpg");
 			  background-position: center;
 			  background-size: 100% auto;
+			  background-repeat: no-repeat;
 			}
 			
 			@media (max-width:767px)  {
