--- a/projects/yellow/index.html
+++ b/projects/yellow/index.html
@@ -30,7 +30,7 @@
 			}
 			
 			#header {
-			  background-image: url("./media/intro.jpg");
+			  background-image: url("../../img/yellow.jpg");
 			  background-position: center;
 			  background-size: 100% auto;
 			  background-repeat: no-repeat;
