--- a/projects/black/index.html
+++ b/projects/black/index.html
@@ -96,8 +96,8 @@
 			<section class="py-5 text-center container" id="Header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Film</h1>
-					<p class="lead text-muted">One day...</p>
+					<h1 class="fw-light text-light">Film</h1>
+					<p class="lead text-muted text-light">One day...</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
 					  <a href="../../gallery" class="btn btn-secondary my-2">View in gallery</a>
