--- a/projects/blue/view.html
+++ b/projects/blue/view.html
@@ -29,7 +29,7 @@
 			  color: #5a5a5a;
 			}
 			
-			#Header {
+			#header {
 			  padding-top: 3rem;
 			}
 		
@@ -92,7 +92,7 @@
 		
 		
 		<main>		
-			<div class="container" id="Header">
+			<div class="container" id="header">
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
