--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,19 @@
 			  padding-bottom: 3rem;
 			  color: #5a5a5a;
 			}
+			
+			#header {
+			  background-image: url("../img/projects.jpg");
+			  background-position: center;
+			  background-size: 100% auto;
+			  background-repeat: no-repeat;
+			}
+			
+			@media (max-width:767px)  {
+			  #header {
+				background-size: auto 100%;
+			  }
+			}
 		
 		</style>
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
@@ -81,7 +94,7 @@
 		</header>
 	
 		<main>
-			<section class="py-5 text-center container">
+			<section class="py-5 text-center container" id="header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light">All projects</h1>
