--- a/projects/yellow/view.html
+++ b/projects/yellow/view.html
@@ -29,7 +29,7 @@
 			  color: #5a5a5a;
 			}
 			
-			#Header {
+			#header {
 			  padding-top: 3rem;
 			}
 		</style>
@@ -83,7 +83,7 @@
 		</header>
 	
 		<main>
-			<section class="container" id="Header">
+			<section class="container" id="header">
 				<h1 class="fw-bold" id="Title"></h1>
 				<p class="text-muted" id="Date"></p>
 				<hr>
