--- a/projects/green/index.html
+++ b/projects/green/index.html
@@ -96,8 +96,8 @@
 			<section class="py-5 text-center container"id="header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">Applications</h1>
-					<p class="lead text-muted">Would be great if everything is cross-platform.</p>
+					<h1 class="fw-light text-light">Applications</h1>
+					<p class="lead text-white-50">Would be great if everything is cross-platform.</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
 					  <a href="../../gallery" class="btn btn-secondary my-2">View in gallery</a>
