--- a/projects/index.html
+++ b/projects/index.html
@@ -97,8 +97,8 @@
 			<section class="py-5 text-center container" id="header">
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
-					<h1 class="fw-light">All projects</h1>
-					<p class="lead text-muted">Literally.</p>
+					<h1 class="fw-light text-light">All projects</h1>
+					<p class="lead text-white-50">Literally.</p>
 				  </div>
 				</div>
 			</section>
