--- a/projects/black/index.html
+++ b/projects/black/index.html
@@ -97,7 +97,7 @@
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light text-light">Film</h1>
-					<p class="lead text-white-50">One day...</p>
+					<p class="lead text-light">One day...</p>
 					<p>
 					  <a href="../" class="btn btn-primary my-2">All projects</a>
 					  <a href="../../gallery" class="btn btn-secondary my-2">View in gallery</a>
