--- a/projects/index.html
+++ b/projects/index.html
@@ -98,7 +98,7 @@
 				<div class="row py-lg-5">
 				  <div class="col-lg-6 col-md-8 mx-auto">
 					<h1 class="fw-light">All projects</h1>
-					<p class="lead text-muted">Literally.</p>
+					<p class="lead">Literally.</p>
 					<p>
 						<a href="../gallery" class="btn btn-secondary my-2">View in gallery</a>
 					</p>
