--- a/projects/index.html
+++ b/projects/index.html
@@ -32,14 +32,8 @@
 			#header {
 			  background-image: url("../img/projects.jpg");
 			  background-position: center;
-			  background-size: 100% auto;
+			  background-size: cover;
 			  background-repeat: no-repeat;
-			}
-			
-			@media (max-width:767px)  {
-			  #header {
-				background-size: auto 100%;
-			  }
 			}
 		
 		</style>
