--- a/projects/green/index.html
+++ b/projects/green/index.html
@@ -107,6 +107,7 @@
 				  
 						
 						<script>
+							var dummy;
 							var File = new XMLHttpRequest();
 							var content;
 							File.open("GET", "./database.txt", false);
@@ -125,7 +126,11 @@
 							var database = JSON.parse(content);
 							var str = "";
 							for (let i in database) {
-								str = "<div class='col'><div class='card shadow-sm'><img class='bd-placeholder-img card-img-top w-100' width='100%' height='225' src='./preview/" + database[i].ID + ".jpg' focusable='false' style='object-fit: cover;'/><div class='card-body'><p class='card-text'>" + database[i].Title + "</p><div class='d-flex justify-content-between align-items-center'><a type='button' class='btn btn-sm btn-outline-secondary' href='../view#" + database[i].ID + "'>View</a><small class='text-muted'>" + database[i].Date + "</small></div></div></div></div>" + str;
+								dummy = "";
+								if (database[i].Discontinued) {
+									dummy = " " + '<span class="badge badge-danger">Discontinued</span>';
+								}
+								str = "<div class='col'><div class='card shadow-sm'><img class='bd-placeholder-img card-img-top w-100' width='100%' height='225' src='./preview/" + database[i].ID + ".jpg' focusable='false' style='object-fit: cover;'/><div class='card-body'><p class='card-text'>" + database[i].Title + dummy + "</p><div class='d-flex justify-content-between align-items-center'><a type='button' class='btn btn-sm btn-outline-secondary' href='../view#" + database[i].ID + "'>View</a><small class='text-muted'>" + database[i].Date + "</small></div></div></div></div>" + str;
 							}
 							document.write(str);
 						</script>
