--- a/projects/index.html
+++ b/projects/index.html
@@ -200,7 +200,7 @@
 										if (Date[i6].split("/")[1] > Date[i6-1].split("/")[1]) {
 											go = true;
 										} else if (Date[i6].split("/")[1] == Date[i6-1].split("/")[1]) {
-											if (Date[i6].split("/")[0] > Date[i6-1].split("/")[0]) {
+											if (Date[i6].split("/")[0] >= Date[i6-1].split("/")[0]) {
 												go = true;
 											}
 										}
