--- a/projects/green/PG Crypt/detail.html
+++ b/projects/green/PG Crypt/detail.html
@@ -5,3 +5,7 @@
 <h2>What's new in v2.2</h2>
 <hr>
 <p>- New encryption algorithm<br>- Added support for Android 12</p>
+<br>
+<h2>Platform</h2>
+<hr>
+<p>Android 5.0 or above</p>
