--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,23 +1,29 @@
 <ol class="list-group list-group-numbered">
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
+      <a class="fw-bold" href="#1&doc=Transport">Transport</div>
+      1.1 <a href="#1&doc=Lift">Lift</a>
+	  1.2 <a href="#1&doc=Bus">Bus</a>
     </div>
-    <span class="badge bg-primary rounded-pill">14</span>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <div class="fw-bold">Subheading</div>
       Content for list item
     </div>
-    <span class="badge bg-primary rounded-pill">14</span>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <div class="fw-bold">Subheading</div>
       Content for list item
     </div>
-    <span class="badge bg-primary rounded-pill">14</span>
   </li>
 </ol>
+
+<h2 id="#1&doc=Transport">Transport</h2>
+<hr>
+<h3 id="#1&doc=Lift">Lift</h3>
+<p>test</p>
+<br>
+<h3 id="#1&doc=Bus">Bus</h3>
+<p>test</p>
