--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -2,8 +2,12 @@
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-      1.1 <a href="#1&doc=Lift">Lift</a>
-	  1.2 <a href="#1&doc=Bus">Bus</a>
+	  <li class="list-group-item d-flex justify-content-between align-items-start">
+		<div class="ms-2 me-auto">
+	      <a href="#1&doc=Lift">Lift</a>
+		  <a href="#1&doc=Bus">Bus</a>
+		</div>
+	  </li>
     </div>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-start">
