--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -2,12 +2,14 @@
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-	  <li class="list-group-item d-flex justify-content-between align-items-start">
-		<div class="ms-2 me-auto">
-	      <a href="#1&doc=Lift">Lift</a>
-		  <a href="#1&doc=Bus">Bus</a>
-		</div>
-	  </li>
+	  <ol class="list-group list-group-numbered">
+	    <li class="list-group-item d-flex justify-content-between align-items-start">
+		  <div class="ms-2 me-auto">
+		    <a href="#1&doc=Lift">Lift</a>
+		    <a href="#1&doc=Bus">Bus</a>
+		  </div>
+	    </li>
+	  </ol>
     </div>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-start">
