--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -1,14 +1,18 @@
+<style>
+.anchor {
+    display: block;
+    position: relative;
+    top: -3rem;
+    visibility: hidden;
+}
+</style>
 <ol class="list-group list-group-numbered">
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <a class="fw-bold" href="#1&doc=Transport">Transport</a>
-	  <ol class="list-group list-group-numbered">
-	    <li class="list-group-item d-flex justify-content-between align-items-start">
-		  <div class="ms-2 me-auto">
-		    <a href="#1&doc=Lift">Lift</a>
-		    <a href="#1&doc=Bus">Bus</a>
-		  </div>
-	    </li>
+	  <ol>
+		<li><a href="#1&doc=Lift">Lift</a></li>
+		<li><a href="#1&doc=Bus">Bus</a></li>
 	  </ol>
     </div>
   </li>
@@ -26,9 +30,9 @@
   </li>
 </ol>
 
-<h2 id="1&doc=Transport">Transport</h2>
+<h2 class="anchor" id="1&doc=Transport">Transport</h2>
 <hr>
-<h3 id="1&doc=Lift">Lift</h3>
+<h3 class="anchor" id="1&doc=Lift">Lift</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus egestas sed sed risus. Diam donec adipiscing tristique risus nec. Morbi tempus iaculis urna id. Amet est placerat in egestas erat imperdiet. Pellentesque habitant morbi tristique senectus et netus et. Tortor posuere ac ut consequat semper. Sit amet facilisis magna etiam tempor orci eu. Aliquet nec ullamcorper sit amet risus. Ac orci phasellus egestas tellus rutrum tellus. Id volutpat lacus laoreet non curabitur gravida.
 
 Quis vel eros donec ac odio tempor. Amet purus gravida quis blandit. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Aliquet nibh praesent tristique magna sit amet purus. Aliquet risus feugiat in ante metus dictum. Morbi tristique senectus et netus et malesuada fames ac turpis. Aliquet nec ullamcorper sit amet. Nisl suscipit adipiscing bibendum est ultricies integer quis. Nunc pulvinar sapien et ligula ullamcorper malesuada. Proin libero nunc consequat interdum varius sit. Ac ut consequat semper viverra nam libero justo. Mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing. Id cursus metus aliquam eleifend. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Vulputate enim nulla aliquet porttitor lacus. Sed pulvinar proin gravida hendrerit. Sit amet volutpat consequat mauris nunc congue. Volutpat commodo sed egestas egestas fringilla.
@@ -39,7 +43,7 @@ Pellentesque habitant morbi tristique senectus et. Malesuada fames ac turpis ege
 
 Nullam non nisi est sit amet facilisis magna etiam tempor. Tempus imperdiet nulla malesuada pellentesque elit eget gravida. Quam lacus suspendisse faucibus interdum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Arcu non odio euismod lacinia at quis risus sed. Lorem ipsum dolor sit amet consectetur adipiscing elit duis. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Pharetra et ultrices neque ornare aenean euismod elementum nisi. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Pellentesque adipiscing commodo elit at. Turpis cursus in hac habitasse platea dictumst. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Turpis egestas maecenas pharetra convallis posuere. Nec feugiat in fermentum posuere urna nec. A cras semper auctor neque. At imperdiet dui accumsan sit amet nulla. Dui vivamus arcu felis bibendum ut tristique et egestas.</p>
 <br>
-<h3 id="1&doc=Bus">Bus</h3>
+<h3 class="anchor" id="1&doc=Bus">Bus</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus egestas sed sed risus. Diam donec adipiscing tristique risus nec. Morbi tempus iaculis urna id. Amet est placerat in egestas erat imperdiet. Pellentesque habitant morbi tristique senectus et netus et. Tortor posuere ac ut consequat semper. Sit amet facilisis magna etiam tempor orci eu. Aliquet nec ullamcorper sit amet risus. Ac orci phasellus egestas tellus rutrum tellus. Id volutpat lacus laoreet non curabitur gravida.
 
 Quis vel eros donec ac odio tempor. Amet purus gravida quis blandit. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Aliquet nibh praesent tristique magna sit amet purus. Aliquet risus feugiat in ante metus dictum. Morbi tristique senectus et netus et malesuada fames ac turpis. Aliquet nec ullamcorper sit amet. Nisl suscipit adipiscing bibendum est ultricies integer quis. Nunc pulvinar sapien et ligula ullamcorper malesuada. Proin libero nunc consequat interdum varius sit. Ac ut consequat semper viverra nam libero justo. Mauris cursus mattis molestie a iaculis at erat pellentesque adipiscing. Id cursus metus aliquam eleifend. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Arcu vitae elementum curabitur vitae nunc sed velit dignissim. Dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu. Vulputate enim nulla aliquet porttitor lacus. Sed pulvinar proin gravida hendrerit. Sit amet volutpat consequat mauris nunc congue. Volutpat commodo sed egestas egestas fringilla.
