--- a/projects/blue/Tanghin in Minecraft/documentation.html
+++ b/projects/blue/Tanghin in Minecraft/documentation.html
@@ -28,27 +28,27 @@ li ol > li:before {
   content: counters(item, ".") " ";
 }
 </style>
-<ol class="list-group list-group-numbered">
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
+<ol>
+  <li>
       <a class="fw-bold" href="#1&doc=Transport">Transport</a>
 	  <ol>
 		<li><a href="#1&doc=Lift">Lift</a></li>
 		<li><a href="#1&doc=Bus">Bus</a></li>
 	  </ol>
-    </div>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
-    </div>
+  <li>
+      <a class="fw-bold" href="#1&doc=Transport">Transport</a>
+	  <ol>
+		<li><a href="#1&doc=Lift">Lift</a></li>
+		<li><a href="#1&doc=Bus">Bus</a></li>
+	  </ol>
   </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Content for list item
-    </div>
+  <li>
+      <a class="fw-bold" href="#1&doc=Transport">Transport</a>
+	  <ol>
+		<li><a href="#1&doc=Lift">Lift</a></li>
+		<li><a href="#1&doc=Bus">Bus</a></li>
+	  </ol>
   </li>
 </ol>
 
